Modified in support of removing the AdapterRepository and AdapterRepositoryEJB projects from the Product/Production/Adapters/Framework directory.